fixed the requestBody for swagger
